Pushing v141 from API b66ddc336807e626aae0dce12b5984fb57b69b92

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3056,7 +3056,7 @@ paths:
       x-belongsToResource: form
   "/v1/forms/{form}/versions/latest":
     post:
-      summary: Update draft version
+      summary: Update a Draft Form Version
       description:
         Updates a form version. If there is no draft version of the form, a new draft version is
         created with the parameters provided.
@@ -4801,7 +4801,7 @@ paths:
       x-belongsToResource: form_version
   "/v1/forms/{form}/versions/latest/publish":
     post:
-      summary: Publish a Form
+      summary: Publish a Form Version
       description:
         Publishes the form version preventing any further changes. Once a version has been published
         it cannot be unpublished. Once published, the version becomes the form's active version and
