Pushing v146 from API 03200b6c45c77ab7f90a1c5b52041abcc95b8013

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -7223,6 +7223,15 @@ paths:
         - in: query
           style: form
           explode: true
+          name: name
+          schema:
+            type: string
+            description: Limit results to task definitions with name containing the given query.
+          required: false
+          description: Limit results to task definitions with name containing the given query.
+        - in: query
+          style: form
+          explode: true
           name: queue
           schema:
             type: array
