Pushing v148 from API ee090c1807cf626950ba78a61edd36fc6f96f69f

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -13773,6 +13773,11 @@ components:
         - queue.created
         - queue.updated
         - queue.deleted
+        - tag.created
+        - tag.updated
+        - tag.archived
+        - tag.unarchived
+        - tag.deleted
         - task.created
         - task.updated
         - task_definition.created
