--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -6273,6 +6273,325 @@ paths:
                 $ref: "#/components/schemas/queue"
       x-methodName: delete
       x-belongsToResource: queue
+  /v1/relationships:
+    post:
+      summary: Create a Relationship
+      description: >-
+        Creates a new relationship between two members. You can create relationships to allow
+        caregivers, family members, or other people to whom the member has consented to participate
+        in the member's care.
+
+
+        An active relationship allows members to view information about one another. For example, if
+        Member A is a caregiver for Member B, Member A can view, edit, and create any data for
+        Member B. Member B can view basic demographic information about Member A.
+      tags:
+        - Relationship
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                subject_member:
+                  type: string
+                  example: mem_5QW8j1oKqQjNaPk4Hv3f
+                  description: The member receiving care to whom the relationship applies.
+                authorized_member:
+                  type: string
+                  example: mem_5QW8j1oKqQjNaPk4Hv3f
+                  description:
+                    The member acting as the related person for the `member`. For example, if a
+                    member consents to their spouse participating in their care, specify the
+                    spouse's member ID here.
+                status:
+                  type: string
+                  enum:
+                    - active
+                    - inactive
+                  description:
+                    Current status of the relationship. By default, newly created relationships have
+                    a status of 'active'. When a relationship is in a status of 'inactive', the
+                    authorized member can no longer access the member's data.
+                  example: active
+                type:
+                  type: string
+                  enum:
+                    - brother
+                    - child
+                    - daughter
+                    - father
+                    - friend
+                    - grandchild
+                    - grandparent
+                    - mother
+                    - parent
+                    - partner
+                    - professional_caregiver
+                    - sibling
+                    - sister
+                    - son
+                    - spouse
+                    - other
+                  description:
+                    The type of relationship. If set to 'other', you must provide a description for
+                    the relationship.
+                  example: spouse
+                description:
+                  type: string
+                  maxLength: 4096
+                  nullable: true
+                  description:
+                    A description for this relationship. Use the description to add detail about the
+                    relationship, such as whether the related member has power of attorney for the
+                    member.
+                  example: Power Of Attorney
+              required:
+                - subject_member
+                - authorized_member
+                - status
+                - type
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/relationship"
+      x-methodName: create
+      x-belongsToResource: relationship
+    get:
+      summary: List all Relationships
+      description: >-
+        Returns a list of relationships within the current account.
+
+
+        The relationships by default are sorted by creation date, with the most recently created
+        relationship appearing first.
+      tags:
+        - Relationship
+      parameters:
+        - in: query
+          style: form
+          explode: true
+          name: ending_before
+          schema:
+            type: string
+            description:
+              A cursor for use in pagination. `ending_before` is an object ID that defines your
+              place in the list. For instance, if you make a list request and receive 100 objects,
+              starting with obj_bar, your subsequent call can include ending_before=obj_bar in order
+              to fetch the previous page of the list.
+          required: false
+          description:
+            A cursor for use in pagination. `ending_before` is an object ID that defines your place
+            in the list. For instance, if you make a list request and receive 100 objects, starting
+            with obj_bar, your subsequent call can include ending_before=obj_bar in order to fetch
+            the previous page of the list.
+        - in: query
+          style: form
+          explode: true
+          name: starting_after
+          schema:
+            type: string
+            description:
+              A cursor for use in pagination. `starting_after` is an object ID that defines your
+              place in the list. For instance, if you make a list request and receive 100 objects,
+              ending with obj_foo, your subsequent call can include starting_after=obj_foo in order
+              to fetch the next page of the list.
+          required: false
+          description:
+            A cursor for use in pagination. `starting_after` is an object ID that defines your place
+            in the list. For instance, if you make a list request and receive 100 objects, ending
+            with obj_foo, your subsequent call can include starting_after=obj_foo in order to fetch
+            the next page of the list.
+        - in: query
+          style: form
+          explode: true
+          name: limit
+          schema:
+            type: number
+            minimum: 1
+            maximum: 100
+            description:
+              A limit on the number of objects to be returned. Limit can range between 1 and 100.
+          required: false
+          description:
+            A limit on the number of objects to be returned. Limit can range between 1 and 100.
+        - in: query
+          style: form
+          explode: true
+          name: subject_member
+          schema:
+            type: string
+            example: mem_5QW8j1oKqQjNaPk4Hv3f
+            description: Limit results to relationships with the given subject member.
+          required: false
+          description: Limit results to relationships with the given subject member.
+        - in: query
+          style: form
+          explode: true
+          name: authorized_member
+          schema:
+            type: string
+            example: mem_5QW8j1oKqQjNaPk4Hv3f
+            description: Limit results to relationships with the given authorized member.
+          required: false
+          description: Limit results to relationships with the given authorized member.
+        - in: query
+          style: form
+          explode: true
+          name: status
+          schema:
+            type: array
+            items:
+              type: string
+              enum:
+                - active
+                - inactive
+            description:
+              Limit results to relationships with the given status. If multiple statuses are
+              provided, relationships matching any of the provided statuses will be returned.
+          required: false
+          description:
+            Limit results to relationships with the given status. If multiple statuses are provided,
+            relationships matching any of the provided statuses will be returned.
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  object:
+                    type: string
+                    default: list
+                    enum:
+                      - list
+                    example: list
+                    description: Always `list`.
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/relationship"
+                    description: Array of results
+                  has_more:
+                    type: boolean
+                    description: Contains `true` if there is another page of results available.
+                required:
+                  - object
+                  - data
+                  - has_more
+      x-methodName: list
+      x-belongsToResource: relationship
+  "/v1/relationships/{id}":
+    get:
+      summary: Retrieve a Relationship
+      description:
+        Retrieves the details of an existing relationship. You need only supply the unique
+        relationship identifier that was returned upon relationship creation.
+      tags:
+        - Relationship
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            example: rel_ggufPKOyKNNWF3TPPXuK
+            description: Unique ID of the relationship.
+          required: true
+          description: Unique ID of the relationship.
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/relationship"
+      x-methodName: retrieve
+      x-belongsToResource: relationship
+    post:
+      summary: Update a Relationship
+      description: >-
+        Updates a relationship between two members.
+
+
+        Any parameters not provided are left unchanged. For example, if you pass the status
+        parameter, that becomes the relationship's current status.
+      tags:
+        - Relationship
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            example: rel_ggufPKOyKNNWF3TPPXuK
+            description: Unique ID of the relationship.
+          required: true
+          description: Unique ID of the relationship.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum:
+                    - active
+                    - inactive
+                  description:
+                    Current status of the relationship. By default, newly created relationships have
+                    a status of 'active'. When a relationship is in a status of 'inactive', the
+                    authorized member can no longer access the member's data.
+                  example: active
+                type:
+                  type: string
+                  enum:
+                    - brother
+                    - child
+                    - daughter
+                    - father
+                    - friend
+                    - grandchild
+                    - grandparent
+                    - mother
+                    - parent
+                    - partner
+                    - professional_caregiver
+                    - sibling
+                    - sister
+                    - son
+                    - spouse
+                    - other
+                  description:
+                    The type of relationship. If set to 'other', you must provide a description for
+                    the relationship.
+                  example: spouse
+                description:
+                  type: string
+                  maxLength: 4096
+                  nullable: true
+                  description:
+                    A description for this relationship. Use the description to add detail about the
+                    relationship, such as whether the related member has power of attorney for the
+                    member.
+                  example: Power Of Attorney
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/relationship"
+      x-methodName: update
+      x-belongsToResource: relationship
   /v1/scheduling/slots:
     get:
       summary: List all Available Slots
@@ -11566,7 +11885,8 @@ components:
         - updated_at
       title: Member
       description: >-
-        Members are people who may receive care from you.
+        Members are people who may receive care from you or who interact with your team, such as
+        caregivers for those receiving care.
 
 
         Most operations in the Source platform center around a particular member. You can create new
@@ -12855,6 +13175,112 @@ components:
         automatically to an assignee within and beyond a member's care team.
       x-resourceId: queue
       x-package: null
+    relationship:
+      type: object
+      properties:
+        object:
+          type: string
+          default: relationship
+          enum:
+            - relationship
+          example: relationship
+          description: Always `relationship`.
+        id:
+          type: string
+          example: rel_ggufPKOyKNNWF3TPPXuK
+          description: Unique ID for the relationship.
+        subject_member:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/member"
+          x-expandable:
+            $ref: "#/components/schemas/member"
+          description: The member receiving care to whom the relationship applies.
+          example: mem_JAfPRRc59eh2YQ1aeL3D
+        authorized_member:
+          oneOf:
+            - type: string
+            - $ref: "#/components/schemas/member"
+          x-expandable:
+            $ref: "#/components/schemas/member"
+          description:
+            The member acting as the related person for the `member`. For example, if a member
+            consents to their spouse participating in their care, specify the spouse's member ID
+            here.
+          example: mem_JAfPRRc59eh2YQ1aeL3D
+        status:
+          type: string
+          enum:
+            - active
+            - inactive
+          description:
+            Current status of the relationship. By default, newly created relationships have a
+            status of 'active'. When a relationship is in a status of 'inactive', the authorized
+            member can no longer access the member's data.
+          example: active
+        type:
+          type: string
+          enum:
+            - brother
+            - child
+            - daughter
+            - father
+            - friend
+            - grandchild
+            - grandparent
+            - mother
+            - parent
+            - partner
+            - professional_caregiver
+            - sibling
+            - sister
+            - son
+            - spouse
+            - other
+          description:
+            The type of relationship. If set to 'other', you must provide a description for the
+            relationship.
+          example: spouse
+        description:
+          type: string
+          maxLength: 4096
+          nullable: true
+          description:
+            A description for this relationship. Use the description to add detail about the
+            relationship, such as whether the related member has power of attorney for the member.
+          example: Power Of Attorney
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp when the relationship was created.
+          example: 2021-05-13T16:33:00.000Z
+        updated_at:
+          type: string
+          format: date-time
+          description: Timestamp when the relationship was last updated.
+          example: 2021-05-13T16:33:00.000Z
+      required:
+        - object
+        - id
+        - subject_member
+        - authorized_member
+        - status
+        - type
+        - description
+        - created_at
+        - updated_at
+      title: Relationship
+      description:
+        Relationships connect a member who is receiving care with a member who is involved in
+        supporting that care. You can use relationships to allow caregivers, family members, or
+        other people to whom the member has consented to participate in the member's care. Active
+        relationships allow a caregiver to view, edit, and create data for a member, such as viewing
+        and sending messages or booking appointments. The member to whom the relationship applies
+        can view basic demographic information about the related person. You can create or update
+        any number of relationships for a given member at any time.
+      x-resourceId: relationship
+      x-package: null
+      x-preview: true
     slot:
       type: object
       properties:
