Pushing v152 from API 107abd4fd758d841ac40be15611861b174f3be9b

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -5276,10 +5276,14 @@ paths:
                   enum:
                     - enrolled
                     - not_enrolled
-                  description:
+                  description: >-
                     Current status of the member's enrollment in receiving care services. By
                     default, newly created members are in the `enrolled` status. If a member is not
                     actively receiving care, use the `not_enrolled` status.
+
+
+                    When viewing a member with `access_level = 'limited'`, the value of
+                    `enrollment_status` will be `redacted`. This is not valid as an input.
                   example: enrolled
               required:
                 - first_name
@@ -5668,10 +5672,14 @@ paths:
                   enum:
                     - enrolled
                     - not_enrolled
-                  description:
+                  description: >-
                     Current status of the member's enrollment in receiving care services. By
                     default, newly created members are in the `enrolled` status. If a member is not
                     actively receiving care, use the `not_enrolled` status.
+
+
+                    When viewing a member with `access_level = 'limited'`, the value of
+                    `enrollment_status` will be `redacted`. This is not valid as an input.
                   example: enrolled
       responses:
         default:
@@ -11885,11 +11893,30 @@ components:
           enum:
             - enrolled
             - not_enrolled
-          description:
+            - redacted
+          description: >-
             Current status of the member's enrollment in receiving care services. By default, newly
             created members are in the `enrolled` status. If a member is not actively receiving
             care, use the `not_enrolled` status.
+
+
+            When viewing a member with `access_level = 'limited'`, the value of `enrollment_status`
+            will be `redacted`. This is not valid as an input.
           example: enrolled
+        access_level:
+          type: string
+          enum:
+            - full
+            - limited
+          description:
+            "Indicates whether any of the member's information has been redacted for security
+            reasons. Possible values are: full - all member fields that are populated in Source have
+            been returned, for example a member viewing themselves, or a care team or API key
+            retrieving a member within their account; or limited - only some very basic identifying
+            information such as name and profile image has been returned, for example a caregiver
+            who can see another caregiver participating in message threads for a member they are
+            both related to, even when the caregivers are not directly related."
+          example: full
         created_at:
           type: string
           format: date-time
@@ -11922,6 +11949,7 @@ components:
         - license_region
         - tags
         - enrollment_status
+        - access_level
         - created_at
         - updated_at
       title: Member
